--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "firebase": "^9.16.0",
     "framer-motion": "^8.5.5",
     "next": "13.1.6",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
